--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-pkg-resources==0.0.0
+# pkg-resources==0.0.0
 psycopg2-binary==2.8.6
 SQLAlchemy==1.3.22
 Werkzeug==1.0.1
